# streamer_tools

./: .gitignore  README.md  TODO.md  config.toml  config_template.toml  settings.db
client/: Cargo.toml
client/src/: config.rs  main.rs  utils.rs
frontend/: Cargo.toml  build.ps1  build.sh  index.html  package-lock.json  package.json  tailwind.config.js
frontend/css/: style.css
frontend/src/: app.tsx  main.rs  main.tsx  utils.rs
frontend/src/components/: active_elements.rs  base.rs  icons.rs  mod.rs  nav.rs  sideapp.rs  timer.rs  timer_item.rs  utils.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  sql.rs  utils.rs  ws.rs
server/src/subathon/: mod.rs  subathon_timer.rs
shared/: Cargo.toml
shared/src/: globals.rs  lib.rs
src.old/: config.rs  lib.rs  twitch.rs
