[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
clap = { version = "4.5.15", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.205", features = ["derive", "serde_derive"] }
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing-subscriber = "0.3.18"
