[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.4.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
clap = "4.4.7"
chrono = "0.4.31"
gloo-timers = "0.3.0"
futures = "0.3.29"
shared = {path =  "../shared"}
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
itertools = "0.12.0"
