[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "ws", "headers"] }
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
rand = "0.8.5"
sqlite = "0.32.0"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
gloo-net = "0.4.0"
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
serde_derive = "1.0.192"
lazy_static = "1.4.0"
serde_json = "1.0.108"
tokio-stream = "0.1.14"
futures = { version = "0.3.29", features = [] }
axum-extra = "0.8.0"
